feature/ka-44-basic-federation (#19)
* (https://jira.catena-x.net/browse/KA-44) Changed Version to 0.5.4

* https://jira.catena-x.net/browse/KA-44 Getting control plane back to running

* https://jira.catena-x.net/browse/KA-44 Getting control plane back to running

* https://jira.catena-x.net/browse/KA-44 disable token encryption

* https://jira.catena-x.net/browse/KA-44 property comments only indented

* https://jira.catena-x.net/browse/KA-44 next try

* https://jira.catena-x.net/browse/KA-44 audience needs to contain the protocol

* https://jira.catena-x.net/browse/KA-44 adapt the postman collection and introduce integration test collection

* https://jira.catena-x.net/browse/KA-44 local config for EDC integration

* https://jira.catena-x.net/browse/KA-44, https://jira.catena-x.net/browse/KA-39 first sparql route-through the EDC with agent plane.

* https://jira.catena-x.net/browse/KA-44, https://jira.catena-x.net/browse/KA-39 Sparql-Over-Http as a sub-protocol to HttpData, make ontop really use the logback config, try to exclude S3 from the azure data plane.

* https://jira.catena-x.net/browse/KA-44, https://jira.catena-x.net/browse/KA-39 Ready for deployment

* https://jira.catena-x.net/browse/KA-44, https://jira.catena-x.net/browse/KA-39 Correct callback port

* https://jira.catena-x.net/browse/KA-44, https://jira.catena-x.net/browse/KA-39 configure public consumer plane ingress correctly.

* https://jira.catena-x.net/browse/KA-44, https://jira.catena-x.net/browse/KA-39 accept parameter encoding must be reverted.

* https://jira.catena-x.net/browse/KA-44, https://jira.catena-x.net/browse/KA-39 source is used in both consumer and provider data planes, must detect assymetry.

* https://jira.catena-x.net/browse/KA-44, https://jira.catena-x.net/browse/KA-39 code smells.

* https://jira.catena-x.net/browse/KA-44, https://jira.catena-x.net/browse/KA-39 parameter encoding improved. Better error handling.

* https://jira.catena-x.net